# pbg-compucell3d

./: .gitignore  README.md  pixi.toml  pyproject.toml
demo/: composite_report.py  demo_report.py
pbg_compucell3d/: __init__.py  composites.py  processes.py  types.py  visualizations.py
pbg_compucell3d/composites/: __init__.py  cell-sorting-demo.composite.yaml  cell-sorting-with-viz.composite.yaml
tests/: test_composites.py  test_processes.py
